# mobaxtauri

./: .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  theme.ts
src-tauri/: Cargo.toml  scratchpad.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  scratchpad.rs  sftp_utils.rs  ssh.rs
src/components/: ContextMenu.tsx  Dashboard.tsx  HealthBar.tsx  NewSessionModal.tsx  OSIcon.tsx  PromptModal.tsx  SftpEditorModal.tsx  SftpSidebar.test.tsx  SftpSidebar.tsx  Sidebar.tsx  TabBar.tsx  Terminal.tsx  TitleBar.tsx
src/components/ui/: color-mode.tsx  dialog.tsx  field.tsx  provider.tsx  tooltip.tsx
src/hooks/: useExportImport.ts
src/store/: useCredentialStore.ts  useSessionStore.ts  useSftpStore.test.ts  useSftpStore.ts
src/test/: setup.ts
src/utils/: importParsers.test.ts  importParsers.ts
