[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = { version = "0.58.1", default-features = false, features = ["ring", "flate2"] }
russh-sftp = "2.1.1"
tauri-plugin-stronghold = "2"
tokio = { version = "1.50.0", features = ["full"] }
russh-keys = "0.49.2"
russh-cryptovec = "0.58.0"
bytes = "1.11.1"
ssh-key = "0.6.7"
async-trait = "0.1.89"
tauri-plugin-store = "2.0.0-rc.0"
tauri-plugin-log = "2.8.0"
log = "0.4.29"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-clipboard-manager = "2"

